# hybrid_cloud_agents

./: .gitignore  DECISIONS.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  spec-compliance.md  test-author.md
.claude/hooks/: check-commit-msg.sh  post-commit-docs.sh  run-tests-gate.sh
.claude/skills/trust-boundary/: SKILL.md
.github/workflows/: ci.yml
certs/: gen-certs.sh
data/private/: employee_handbook.txt  financial_report.txt  holiday-calendar.md  it-access-policy.md  project-codenames.md  security_procedures.txt
data/public/: ai_trends.txt  cloud_computing.txt  open_source_llms.txt  product-overview.md  release-notes.md  support-hours.md
docker/private/: Dockerfile
docker/public/: Dockerfile
docs/: index.md  v1-spec.md
docs/api/: common.md  orchestrator.md  private.md  public.md
docs/reference/: common.md  orchestrator.md  private.md  public.md
manifests/private/: deployment.yaml  orchestrator.yaml
manifests/public/: deployment.yaml  worker.yaml
specs/: index.md  v1-spec.md  v2-spec.md  v3-spec.md  v4-spec.md  v5-spec.md  v6-spec.md
src/common/: __init__.py  models.py  paths.py  retrieval_logging.py
src/orchestrator/: __init__.py  graph.py  main.py  retriever.py  synthesizer.py
src/private/: __init__.py  ingest.py
src/public/: __init__.py  ingest.py  main.py  retriever.py  summarizer.py
tests/: __init__.py  conftest.py
tests/integration/boundary/: __init__.py  test_boundary.py  test_membrane.py
tests/integration/e2e/: __init__.py  test_kind_clusters.py
tests/integration/mtls/: __init__.py  test_mtls.py
tests/unit/common/: test_models.py  test_retrieval_logging.py
tests/unit/orchestrator/: test_graph.py  test_main.py  test_retriever.py  test_synthesizer.py
tests/unit/private/: __init__.py  (+1 more)
(+5 files in other folders)
